--- a/Home.html
+++ b/Home.html
@@ -7,8 +7,38 @@
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="#" class="logoa"> stad Müncen </a></b></div>
-            <div class="menu"><p class="menua"><b><a href="#" class="mena"> Sehenswürdigkeite</a><a href="#" class="mena"> Restaurant</a><a href="#" class="mena"> Events</a></p> </b></div>
+            <div class="logo"><b><a href="#" class="logoa"> stad Müncen </a></b>
+            </div>
+            <div class="menu"><p class="menua"><b><a href="#" class="mena"> Sehenswürdigkeite</a>
+                <a href="#" class="mena"> Restaurant</a><a href="#" class="mena"> Events</a></b> 
+                <a href="#"><img src="Bild/fac.png" alt=""></a>
+                <a href="#"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+            </div>
+        </div>
+        <div class="bod">
+                <figure class="figl">
+                    <img src="" alt="">
+                </figure>
+                <div class="bildl">
+                    <img class="" alt="">
+                </div>
+                <div class="text">
+
+                </div>
+                <div class="text1">
+
+                </div>
+                <div class="bildr">
+                    <img class="" alt="">
+                </div>
+                <div class="bildr1">    
+                    <img class="" alt="">
+                </div>
+
+
+        </div>
+        <div class="footer">
+
         </div>
            
     </body>
