--- a/Index.html
+++ b/Index.html
@@ -14,9 +14,10 @@
                 <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
                 <a href="Restaurant.html" class="mena"> Restaurant</a>
                 <a href="Hotels.html" class="mena"> Hotels</a></b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
             </div>
+        </div>    
                 <div>
                     <p class="text">
                         <a href="#" class="München"> München</a><br><b>
@@ -35,9 +36,10 @@
                     </p>
                 </div>
             <div class="button">
+                <form action="https://de.wikipedia.org/wiki/M%C3%BCnchen" target="_blank">
                 <button class="butt"> Weiter </button>
+                </form>
             </div>
-                           
         <div class="footer">
                 <p class="menua"><b>
                 <a href="Transport.html" class="mena"> Transport </a>
