--- a/Touristen.html
+++ b/Touristen.html
@@ -14,8 +14,8 @@
                 <a href="Transport.html" class="mena"> Transport </a>
                 <a href="Events.html" class="mena"> Events </a>       
                 <a href="Hotels.html" class="mena"> Hotels</a></b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
             </div>
                 <div>
                     <p class="text">
