--- a/Index copy.html
+++ b/Index copy.html
@@ -7,14 +7,13 @@
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="Index.html" class="logoa"> Restaurant </a></b>
+            <div class="logo"><b><a href="#" class="logoa"> der Stadt München </a></b>
             </div>
             <div class="menu">
                 <p class="menua"><b>
-                <a href="Hotels.html" class="mena"> Hotels</a>
-                <a href="Transport.html" class="mena"> Transport </a>
                 <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
-            </b> 
+                <a href="Restaurant.html" class="mena"> Restaurant</a>
+                <a href="Hotels.html" class="mena"> Hotels</a></b> 
                 <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
                 <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
             </div>
@@ -35,17 +34,15 @@
                         <!-- <a href="https://de.wikipedia.org/wiki/M%C3%BCnchen" class="weiter">weiter</a> -->
                         <br>                      
                     </p>
+                    <form action="https://de.wikipedia.org/wiki/M%C3%BCnchen" target="_blank" class="button">
+                        <button class="butt"> Weiter </button>
+                    </form>
                 </div>
-            <div class="button">
-                <form action="https://de.wikipedia.org/wiki/M%C3%BCnchen" target="_blank">
-                <button class="butt"> Weiter </button>
-                </form>
-            </div>
         <div class="footer">
                 <p class="menua"><b>
+                <a href="Transport.html" class="mena"> Transport </a>
                 <a href="Events.html" class="mena"> Events </a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
-                <a href="Medizin.html" class="mena"> die Medizin </a></b> 
+                <a href="Touristen.html" class="mena"> Informationen für Touristen </a></b> 
                </p>
         </div>
            
