--- a/Transport.html
+++ b/Transport.html
@@ -3,7 +3,7 @@
 <head>
     <meta cherset="UTF-8">
     <Link rel="stylesheet" href="qqq.css">
-    <title> Transport </title>
+    <title> der Stadt München</title>
 </head>
     <body>
         <div class="nav">
@@ -12,11 +12,12 @@
             <div class="menu">
                 <p class="menua"><b>
                 <a href="Events.html" class="mena"> Events </a>
-                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
-                <a href="Restaurant.html" class="mena"> Restaurant</a></b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
+                <a href="Hotels.html" class="mena"> Hotels</a></b> 
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
             </div>
+        </div>    
                 <div>
                     <p class="text">
                         <a href="#" class="München"> München</a><br><b>
@@ -35,14 +36,16 @@
                     </p>
                 </div>
             <div class="button">
+                <form action="https://de.wikipedia.org/wiki/M%C3%BCnchen" target="_blank">
                 <button class="butt"> Weiter </button>
+                </form>
             </div>
-                           
         <div class="footer">
                 <p class="menua"><b>
-                <a href="Hotels.html" class="mena"> Hotels</a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
-                <a href="Medizin.html" class="mena">  die Medizin</a></b> 
+                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
+                <a href="Restaurant.html" class="mena"> Restaurant</a>
+                <a href="Medizin.html" class="mena"> die Medizin </a>
+                </b> 
                </p>
         </div>
            
