--- a/Sehenswürdigkeite.html
+++ b/Sehenswürdigkeite.html
@@ -12,8 +12,8 @@
             <div class="menu">
                 <p class="menua"><b>
                 <a href="Restaurant.html" class="mena"> Restaurant</a>
-                <a href="Hotels.html" class="mena"> Hotels</a></b> 
-                <a href="Transport.html" class="mena"> Transport </a>
+                <a href="Hotels.html" class="mena"> Hotels</a>
+                <a href="Transport.html" class="mena"> Transport </a></b>
                 <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
                 <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
             </div>
@@ -57,7 +57,13 @@
                             <button class="butt"> Weiter </button>
                             </form>
                             </figure>
-                </div>
+
+                            <div class="but">
+                            <form action="https://www.muenchen.de/sehenswuerdigkeiten" target="_blank">
+                                <button class="butf"> Andere... </button>
+                                </form>
+                            </div>
+                </div>       
         <div class="footer">
                 <p class="menua"><b>
                 <a href="Events.html" class="mena"> Events </a>
