--- a/Hotels.html
+++ b/Hotels.html
@@ -53,7 +53,7 @@
                             Das Wombat's City Hostel Munich Werksviertel 
                             in München liegt Ihr uebernachtung ganz bequem online zu buchen...</b></p>
                     
-                    <form action="https://www.muenchen.de/sehenswuerdigkeiten/botanischer-garten" target="_blank">
+                    <form action="https://www.booking.com/hostels/city/de/munich.de.html?aid=375021&label=city-munich-UC8J5tqAdqJ%2AyeO6BzuxUwS54114259985%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-4823162088%3Alp9061172%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YdzvEsd293RqdnMpNCqYrDA&gclid=EAIaIQobChMIj5nKp7mp_wIVg9V3Ch1e9whiEAAYASAAEgK_IfD_BwE&keep_landing=1&sid=b4696d1697dd803ac64d8fe14c364346" target="_blank">
                     <button class="butt"> Weiter </button>
                     </form>
                     </figure>
@@ -63,6 +63,7 @@
                         <button class="butfh"> Andere... </button>
                         </form>
                     </div>
+        </div>
                            
         <div class="footer">
                 <p class="menua"><b>
