--- a/Eventsc.html
+++ b/Eventsc.html
@@ -2,26 +2,26 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css">
+    <Link rel="stylesheet" href="qqzy.css">
     <title> Events </title>
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="Home.html" class="logoa"> Events </a></b>
+            <div class="logo"><b><a href="Homec.html" class="logoa"> Events </a></b>
             </div>
             <div class="menu">
                 <p class="menua"><b>
-                <a href="Medizin.html" class="mena"> die Medizin </a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
-                <a href="Transport.html" class="mena"> Transport </a></b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="Medizinc.html" class="mena"> die Medizin </a>
+                <a href="Touristenc.html" class="mena"> Informationen für Touristen </a>
+                <a href="Transportc.html" class="mena"> Transport </a></b> 
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild2/f.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild2/y.png" alt="" class="png"></a> </p>
             </div>
         </div>
         <div class="kont">
 
             <div class="kontf">
-            <img src="Bild/Oct.jpg" class="bil">
+            <img src="Bild2/Oct.jpg" class="bil">
                 <p class="München"><b>Das Oktoberfest in München ist das 
                     weltweit größte Volksfest. Es wird seit 1810 
                     jährlich auf der Theresienwiese in der bayerischen 
@@ -33,7 +33,7 @@
             </form>
             </div>
             <div class="kontf">
-                <img src="Bild/Fam.jpeg" class="bil">
+                <img src="Bild2/Fam.jpeg" class="bil">
                     <p class="München"><b>Eintritt frei: für Kinder und Familien
                         München für Kinder: Tipps für kostenlose Freizeitangebote
                         Von Abenteuerspielplatz über Museumsbesuch bis Waldausflug
@@ -45,7 +45,7 @@
                 </form>
             </div>
                 <div class="kontf">
-                    <img src="Bild/sal.jpg" class="bil">
+                    <img src="Bild2/sal.jpg" class="bil">
                         <p class="München"><b>Münchner Sommernachtstraum 2023 im Olympiapark
                             Der Münchner Sommernachtstraum im Olympiapark steigt am 15. Juli
                             2023 mit einem großen Feuerwerk - davor gibt es Open-Air-Konzerte
@@ -64,9 +64,9 @@
                 </div>
                 <div class="but">
                 <p class="menua"><b>
-                <a href="Hotels.html" class="mena"> Hotels </a>
-                <a href="Restaurant.html" class="mena"> Restaurant </a>
-                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite </a>
+                <a href="Hotelsc.html" class="mena"> Hotels </a>
+                <a href="Restaurantc.html" class="mena"> Restaurant </a>
+                <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite </a>
                 </b>
                </p>
             </div>
