--- a/Hotelsc.html
+++ b/Hotelsc.html
@@ -2,25 +2,25 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css">
+    <Link rel="stylesheet" href="qqzy.css">
     <title> Hotels </title>
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="Home.html" class="logoa"> Hotels </a></b>
+            <div class="logo"><b><a href="Homec.html" class="logoa"> Hotels </a></b>
             </div>
             <div class="menu">
                 <p class="menua"><b>
-                <a href="Transport.html" class="mena"> Transport </a>
-                <a href="Events.html" class="mena"> Events </a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a></b> 
-                <a<a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="Transportc.html" class="mena"> Transport </a>
+                <a href="Eventsc.html" class="mena"> Events </a>
+                <a href="Touristenc.html" class="mena"> Informationen für Touristen </a></b> 
+                <a<a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild2/f.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild2/y.png" alt="" class="png"></a> </p>
             </div>
         </div>
         <div class="kont">
             <div class="kontf">
-            <img src="Bild/hotel.jpg" class="bil">
+            <img src="Bild2/hotel.jpg" class="bil">
                 <p class="München"><b>Hotels für Individualreisende in München
                         Die Experten des Gästeservice von München Tourismus
                         helfen Ihnen gerne, die passende Unterkunft zu f
@@ -33,7 +33,7 @@
             </div>
 
             <div class="kontf">
-                <img src="Bild/Air.jpg" class="bil">
+                <img src="Bild2/Air.jpg" class="bil">
                     <p class="München"><b>Airbnb ist ein 2008 im kalifornischen
                         Silicon Valley gegründetes US-amerikanisches Unternehmen,
                         das unter dem gleichen Namen ein Online-Portal zur Buchung 
@@ -46,7 +46,7 @@
             </div>
 
                 <div class="kontf">
-                    <img src="Bild/hostel.jpg" class="bil">
+                    <img src="Bild2/hostel.jpg" class="bil">
                         <p class="München"><b>Hostels in München
                             Die beste Möglichkeit, um gleichgesinnte Reisende 
                             zu treffen und günstig zu übernachten.
@@ -69,9 +69,9 @@
                 </div>
             <div class="but">
                 <p class="menua"><b>
-                <a href="Restaurant.html" class="mena"> Restaurant </a>
-                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite </a>
-                <a href="Medizin.html" class="mena"> die Medizin </a></b>
+                <a href="Restaurantc.html" class="mena"> Restaurant </a>
+                <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite </a>
+                <a href="Medizinc.html" class="mena"> die Medizin </a></b>
                </p>
             </div>
         </div>
