--- a/Medizinc.html
+++ b/Medizinc.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css">
+    <Link rel="stylesheet" href="qqzy.css">
     <title>die Medizin</title>
 </head>
     <body>
@@ -11,16 +11,16 @@
             </div>
             <div class="menu">
                 <p class="menua"><b>
-                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
-                <a href="Restaurant.html" class="mena"> Restaurant</a>
-                <a href="Hotels.html" class="mena"> Hotels</a></b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite</a>
+                <a href="Restaurantc.html" class="mena"> Restaurant</a>
+                <a href="Hotelsc.html" class="mena"> Hotels</a></b> 
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild2/f.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild2/y.png" alt="" class="png"></a> </p>
             </div>
         </div>
             <div class="kont">
                 <div class="kontf">
-                    <img src="Bild/Apot.jpg" class="bil">
+                    <img src="Bild2/Apot.jpg" class="bil">
                         <p class="München"><b>Die nächste Dienstapotheke finden 
                             Sie unter. Zudem sind die Notdienstapotheken in Ihrer Nähe auch an den
                             Eingängen der Apotheken aufgeschrieben. Viele Medikamente
@@ -32,7 +32,7 @@
                 </div>
     
                     <div class="kontf">
-                        <img src="Bild/schwanger.jpg" class="bil">
+                        <img src="Bild2/schwanger.jpg" class="bil">
                             <p class="München"><b>Schwangerschaft und Geburt
                                 Wenn Sie schwanger sind, haben Sie Anspruch auf ärztliche 
                                 Versorgung in einer gynäkologischen Arztpraxis und durch eine
@@ -45,7 +45,7 @@
                     </div>
     
                     <div class="kontf">
-                        <img src="Bild/Not.jpg" class="bil">
+                        <img src="Bild2/Not.jpg" class="bil">
                             <p class="München"><b> Medizinische Notdienste in München
                                 : Telefonnummern und Adressen
                                 Rettungsdienst, Bereitschaftsdienst, Kliniken,
@@ -68,9 +68,9 @@
             </div>
             <div class="but">
                 <p class="menua"><b>
-                <a href="Transport.html" class="mena"> Transport </a>
-                <a href="Events.html" class="mena"> Events </a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a></b> 
+                <a href="Transportc.html" class="mena"> Transport </a>
+                <a href="Eventsc.html" class="mena"> Events </a>
+                <a href="Touristenc.html" class="mena"> Informationen für Touristen </a></b> 
                </p>
             </div>
         </div>
