--- a/Restaurantc.html
+++ b/Restaurantc.html
@@ -2,26 +2,26 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css">
+    <Link rel="stylesheet" href="qqzy.css">
     <title> Restaurant </title>
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="Home.html" class="logoa"> Restaurant </a></b>
+            <div class="logo"><b><a href="Homec.html" class="logoa"> Restaurant </a></b>
             </div>
             <div class="menu">
                 <p class="menua"><b>
-                <a href="Hotels.html" class="mena"> Hotels</a>
-                <a href="Transport.html" class="mena"> Transport </a>
-                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
+                <a href="Hotelsc.html" class="mena"> Hotels</a>
+                <a href="Transportc.html" class="mena"> Transport </a>
+                <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite</a>
             </b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild2/f.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild2/y.png" alt="" class="png"></a> </p>
             </div>
         </div>    
         <div class="kont">
             <div class="kontf">
-            <img src="Bild/Bayr.jpg" class="bil">
+            <img src="Bild2/Bayr.jpg" class="bil">
                 <p class="München"><b>Die bayrische Küche und das 
                     bayrische Bier – beides gehört einfach zu München 
                     dazu und wird von Besuchern und Einheimischen gleichermaßen 
@@ -34,7 +34,7 @@
             </div>
 
             <div class="kontf">
-                <img src="Bild/Eve.jfif" class="bil">
+                <img src="Bild2/Eve.jfif" class="bil">
                     <p class="München"><b>Eventlocation München und in der Nähe
                         Ihr sucht in München und Umgebung eine Eventlocation 
                         für euren Geburtstag, eure Hochzeit oder Firmenfeier?
@@ -47,7 +47,7 @@
             </div>
 
                 <div class="kontf">
-                    <img src="Bild/ital.jpg" class="bil">
+                    <img src="Bild2/ital.jpg" class="bil">
                         <p class="München"><b>Italienisch München und in der Nähe
                             Pizza, Pasta, Vino. Na, klingt das nicht nach Dolce
                              Vita pur? Finden wir auch! Noch dazu geht italienisch
@@ -67,9 +67,9 @@
             </div>
             <div class="but">
                 <p class="menua"><b>
-                <a href="Events.html" class="mena"> Events </a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
-                <a href="Medizin.html" class="mena"> die Medizin </a></b> 
+                <a href="Eventsc.html" class="mena"> Events </a>
+                <a href="Touristenc.html" class="mena"> Informationen für Touristen </a>
+                <a href="Medizinc.html" class="mena"> die Medizin </a></b> 
                </p>
             </div>
         </div>
