--- a/Sehenswürdigkeitec.html
+++ b/Sehenswürdigkeitec.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css">
+    <Link rel="stylesheet" href="qqzy.css">
     <title> Sehenswürdigkeite </title>
 </head>
     <body>
@@ -11,16 +11,16 @@
             </div>
             <div class="menu">
                 <p class="menua"><b>
-                <a href="Restaurant.html" class="mena"> Restaurant</a>
-                <a href="Hotels.html" class="mena"> Hotels</a>
-                <a href="Transport.html" class="mena"> Transport </a></b>
-                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="Restaurantc.html" class="mena"> Restaurant</a>
+                <a href="Hotelsc.html" class="mena"> Hotels</a>
+                <a href="Transportc.html" class="mena"> Transport </a></b>
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild2/f.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild2/y.png" alt="" class="png"></a> </p>
             </div>
         </div>    
                 <div class="kont">
                     <div class="kontf">
-                    <img src="Bild/Marpl.jpg" class="bil">
+                    <img src="Bild2/Marpl.jpg" class="bil">
                         <p class="München"><b>Der Marienplatz in
                              der Münchner Altstadt - was ihn so sehenswert macht
                             Der Münchner Marienplatz mit dem Neuen
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="kontf">
-                        <img src="Bild/frank.jpg" class="bil">
+                        <img src="Bild2/frank.jpg" class="bil">
                             <p class="München"><b>Alle Infos zu Dom, Türmen und Teufelstritt
                                 Der Dom „Zu Unserer Lieben Frau“, auch Frauenkirche 
                                 genannt, ist das unverwechselbare Wahrzeichen der Stadt
@@ -47,7 +47,7 @@
                 </div>
 
                         <div class="kontf">
-                            <img src="Bild/botg.jpg" class="bil">
+                            <img src="Bild2/botg.jpg" class="bil">
                                 <p class="München"><b>Botanischer Garten München Nymphenburg: Das ist geboten
                                     Entdeckt im Botanischen Garten in München Pflanzen und Tiere oder 
                                     schlendert durch blühende Haine. 
@@ -68,9 +68,9 @@
             </div>
             <div class="but">  
                 <p class="menua"><b>
-                <a href="Events.html" class="mena"> Events </a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
-                <a href="Medizin.html" class="mena"> die Medizin </a></b> 
+                <a href="Eventsc.html" class="mena"> Events </a>
+                <a href="Touristenc.html" class="mena"> Informationen für Touristen </a>
+                <a href="Medizinc.html" class="mena"> die Medizin </a></b> 
                </p>
             </div>
         </div>
