--- a/Touristenc.html
+++ b/Touristenc.html
@@ -2,25 +2,25 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css"> 
+    <Link rel="stylesheet" href="qqzy.css"> 
     <title> Touristen </title>
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="Home.html" class="logoa"> Informationen für Touristen </a></b>
+            <div class="logo"><b><a href="Homec.html" class="logoa"> Informationen für Touristen </a></b>
             </div>
             <div class="menu"> 
                 <p class="menua"><b>
-                <a href="Transport.html" class="mena"> Transport </a>
-                <a href="Events.html" class="mena"> Events </a>       
-                <a href="Hotels.html" class="mena"> Hotels</a></b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="Transportc.html" class="mena"> Transport </a>
+                <a href="Eventsc.html" class="mena"> Events </a>       
+                <a href="Hotelsc.html" class="mena"> Hotels</a></b> 
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild2/f.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild2/y.png" alt="" class="png"></a> </p>
             </div>
         </div>  
             <div class="kont">
                 <div class="kontf">
-                    <img src="Bild/info.jpg" class="bil">
+                    <img src="Bild2/info.jpg" class="bil">
                         <p class="München"><b>In der Stadt-Information 
                             im Rathaus erhalten Sie Prospekte, Informationsmaterial
                             und Formulare zu unterschiedlichen Themen. Die Mitarbeiter 
@@ -33,7 +33,7 @@
                 </div>
     
                     <div class="kontf">
-                        <img src="Bild/traf.jpg" class="bil">
+                        <img src="Bild2/traf.jpg" class="bil">
                             <p class="München"><b>Mobilität von Personen und Gütern ist
                                 eine wichtige Voraussetzung für das Funktionieren unserer
                                 arbeitsteiligen Volkswirtschaft. Sie ermöglicht uns hochwertige
@@ -45,7 +45,7 @@
                     </div>
     
                     <div class="kontf">
-                        <img src="Bild/ter.jpg" class="bil">
+                        <img src="Bild2/ter.jpg" class="bil">
                             <p class="München"><b>Online-Terminvereinbarung
                                 Sie wollen die Landeshauptstadt München vor
                                 Ort besuchen? Vereinbaren Sie vorher einen 
@@ -66,9 +66,9 @@
             </div>
             <div class="but">
                 <p class="menua"><b>
-                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
-                <a href="Restaurant.html" class="mena"> Restaurant</a>
-                <a href="Medizin.html" class="mena"> die Medizin </a>
+                <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite</a>
+                <a href="Restaurantc.html" class="mena"> Restaurant</a>
+                <a href="Medizinc.html" class="mena"> die Medizin </a>
                 </b> 
                </p>
             </div>
