--- a/Transportc.html
+++ b/Transportc.html
@@ -2,25 +2,25 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css">
+    <Link rel="stylesheet" href="qqzy.css">
     <title> Transport </title>
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="Home.html" class="logoa"> Transport </a></b>
+            <div class="logo"><b><a href="Homec.html" class="logoa"> Transport </a></b>
             </div>
             <div class="menu">
                 <p class="menua"><b>
-                <a href="Events.html" class="mena"> Events </a>
-                <a href="Touristen.html" class="mena"> Informationen für Touristen </a>
-                <a href="Hotels.html" class="mena"> Hotels</a></b> 
-                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild/fac.png" alt=""></a>
-                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild/yo.png" alt="" class="png"></a> </p>
+                <a href="Eventsc.html" class="mena"> Events </a>
+                <a href="Touristenc.html" class="mena"> Informationen für Touristen </a>
+                <a href="Hotelsc.html" class="mena"> Hotels</a></b> 
+                <a href="https://www.facebook.com/Stadt.Muenchen/" target="_blank"><img src="Bild2/f.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCUpmzhtRAiRYDUmpshbt9wA" target="_blank"><img src="Bild2/y.png" alt="" class="png"></a> </p>
             </div>
         </div>    
         <div class="kont">
             <div class="kontf">
-            <img src="Bild/bus.jpg" class="bil">
+            <img src="Bild2/bus.jpg" class="bil">
                 <p class="München"><b>Munich Public Transport: How to get
                     around in Munich Public transport in Munich is based 
                     on four pillars: U-Bahn, S-Bahn, tram and bus. <br> Here 
@@ -32,7 +32,7 @@
             </div>
 
             <div class="kontf">
-                <img src="Bild/Auto.jpg" class="bil">
+                <img src="Bild2/Auto.jpg" class="bil">
                     <p class="München"><b>Carsharing die organisierte 
                         gemeinschaftliche Nutzung eines oder mehrerer 
                         Automobile auf der Grundlage einer Rahmenvereinbarung.
@@ -45,7 +45,7 @@
             </div>
 
                 <div class="kontf">
-                    <img src="Bild/Fah.jpg" class="bil">
+                    <img src="Bild2/Fah.jpg" class="bil">
                         <p class="München"><b>Radwegenetz in und um München
                             Radrouten, Ringverbindungen und künftig auch 
                             Radschnellwege bilden das Münchner Radverkehrsnetz
@@ -65,9 +65,9 @@
             </div>
             <div class="but">
                 <p class="menua"><b>
-                <a href="Sehenswürdigkeite.html" class="mena"> Sehenswürdigkeite</a>
-                <a href="Restaurant.html" class="mena"> Restaurant</a>
-                <a href="Medizin.html" class="mena"> die Medizin </a>
+                <a href="Sehenswürdigkeitec.html" class="mena"> Sehenswürdigkeite</a>
+                <a href="Restaurantc.html" class="mena"> Restaurant</a>
+                <a href="Medizinc.html" class="mena"> die Medizin </a>
                 </b> 
                </p>
             </div>
