--- a/Restaurant.html
+++ b/Restaurant.html
@@ -3,6 +3,7 @@
 <head>
     <meta cherset="UTF-8">
     <Link rel="stylesheet" href="qqz.css">
+    <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon">
     <title> Restaurant </title>
 </head>
     <body>
