--- a/Touristen.html
+++ b/Touristen.html
@@ -2,7 +2,8 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css"> 
+    <Link rel="stylesheet" href="qqz.css">
+    <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon">
     <title> Touristen </title>
 </head>
     <body>
