--- a/Touristenc.html
+++ b/Touristenc.html
@@ -2,7 +2,8 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqzy.css"> 
+    <Link rel="stylesheet" href="qqzy.css">
+    <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon">
     <title> Touristen </title>
 </head>
     <body>
