--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <div class="nav">
-            <div class="logo"><b><a href="#" class="logoa"> der Stadt München </a></b>
+            <div class="logo"><b><a href="https://www.google.com/maps/place/%D0%9C%D1%8E%D0%BD%D1%85%D0%B5%D0%BD/@48.1549107,11.5418357,11z/data=!3m1!4b1!4m6!3m5!1s0x479e75f9a38c5fd9:0x10cb84a7db1987d!8m2!3d48.1351253!4d11.5819805!16s%2Fm%2F02h6_6p?entry=ttu" target="_blank" class="logoa"> der Stadt München </a></b>
             </div>
             <div class="menu">
                 <p class="menua"><b>
