--- a/Eventsc.html
+++ b/Eventsc.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqzy.css">
+    <Link rel="stylesheet" href="qqqy.css">
     <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon">
     <title> Events </title>
 </head>
