--- a/Restaurant.html
+++ b/Restaurant.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqz.css">
+    <Link rel="stylesheet" href="qqq.css">
     <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon">
     <title> Restaurant </title>
 </head>
