add js funktion  change Html

--- a/Hotelsc.html
+++ b/Hotelsc.html
@@ -2,8 +2,8 @@
 <html lang="de">
 <head>
     <meta cherset="UTF-8">
-    <Link rel="stylesheet" href="qqqy.css">
-    <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon">
+    <Link rel="stylesheet" href="qqqy.css"/>
+    <link rel="shortcut icon" href="Bild/Stadt.ico" type="image/x-icon"/>
     <title> Hotels </title>
 </head>
     <body>
