Vordefinierte Stile für die Seite  Spiel.html hinzugefügt Links...

--- a/Spiel.html
+++ b/Spiel.html
@@ -7,40 +7,41 @@
     <title> das Spiel </title>
 </head>
     <body>
-        <h1 class="Begr">Kennen Sie die Stadt München?</h1>
-        <p class="zurück"> zurück </p>
+        <a href="Index.html" class="zurück"> zurück... </a>
         <div class="Spiel">
             <div class="dasbild">
                 <img src="Bild/Marplatz.jpg" alt="" class="bild">
-                <a href="" class="am"> Erkennen Sie genau am Bild </a>
+                <a href="https://de.wikipedia.org/wiki/Marienplatz_(M%C3%BCnchen)" class="am"> Erkennen Sie genau am Bild </a>
                 <input type="text" class="inp" id="f1">
             </div>
             <div class="dasbild">
                 <img src="Bild/Olimpt.jpg" alt="" class="bild">
-                <a href="" class="am"> Erkennen Sie genau am Bild </a>
+                <a href="https://de.wikipedia.org/wiki/Olympiaturm" class="am"> Erkennen Sie genau am Bild </a>
                 <input type="text" class="inp" id="f2">
             </div>
             <div class="dasbild">
                 <img src="Bild/Statue.jpg" alt="" class="bild">
-                <a href="" class="am"> Erkennen Sie genau am Bild </a>
+                <a href="https://de.wikipedia.org/wiki/Bavaria" class="am"> Erkennen Sie genau am Bild </a>
                 <input type="text" class="inp" id="f3">
             </div>
+            <h1 class="Begr">Kennen Sie die Stadt München?...</h1>
             <div class="dasbild">
                 <img src="Bild/FrKirche.jpg" alt="" class="bild">
-                <a href="" class="am"> Erkennen Sie genau am Bild </a>
+                <a href="https://de.wikipedia.org/wiki/Frauenkirche_(M%C3%BCnchen)" class="am"> Erkennen Sie genau am Bild </a>
                 <input type="text" class="inp" id="f4">
             </div>
             <div class="dasbild">
                 <img src="Bild/EG.jpg" alt="" class="bild">
-                <a href="" class="am"> Erkennen Sie genau am Bild </a>
+                <a href="https://de.wikipedia.org/wiki/Englischer_Garten_(M%C3%BCnchen)" class="am"> Erkennen Sie genau am Bild </a>
                 <input type="text" class="inp" id="f5">
             </div>
             <div class="dasbild">
                 <img src="Bild/Nfschl.jpg" alt="" class="bild">
-                <a href="" class="am"> Erkennen Sie genau am Bild </a>
+                <a href="https://de.wikipedia.org/wiki/Schloss_Nymphenburg" class="am"> Erkennen Sie genau am Bild </a>
                 <input type="text" class="inp" id="f6">
             </div>
-            <button id="antwort" onclick="Probieren()">probieren</button>
+            <br>
+            <button  id="antwort" onclick="Probieren()"> p r o b i e r e n . . .  </button>
         </div>
 <script src="Index.js"></script>
     </body>
